--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
 
     <main>
-        <div class="uv" data-no-load="true" style="width:800px; height:600px; background-color: #000"></div>
+        <div class="uv" data-config="/examples/config.json" data-no-load="true" style="width:800px; height:600px; background-color: #000"></div>
     </main>
 
     <footer style="display: none">
