--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
 
     </footer>
 
+    <script type="text/javascript" src="browserdetect.js"></script>
+    <script type="text/javascript" src="lib/utils/dist/utils.js"></script>
     <script type="text/javascript" src="lib/jquery/dist/jquery.js"></script>
     <script type="text/javascript" src="lib/jmespath.js/jmespath.js"></script>
     <script type="text/javascript" src="lib/json-editor/dist/jsoneditor.js"></script>
