--- a/test.html
+++ b/test.html
@@ -4,11 +4,11 @@
         #page {
             margin: 100px auto;
             width: 800px;
-            position: relative;
+            /*position: relative;*/
         }
 
         #main {
-            position: relative;
+            /*position: relative;*/
         }
     </style>
 </head>
