--- a/noeditor.html
+++ b/noeditor.html
@@ -39,9 +39,10 @@
 
     </footer>
 
+    <script type="text/javascript" src="browserdetect.js"></script>
+    <script type="text/javascript" src="lib/utils/dist/utils.js"></script>
     <script type="text/javascript" src="lib/jquery/dist/jquery.js"></script>
     <script type="text/javascript" src="plugins.js"></script>
-    <script type="text/javascript" src="utils.js"></script>
     <script type="text/javascript" src="examples.js"></script>
 
 </body>
