--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <script type="text/javascript" src="lib/jquery/dist/jquery.js"></script>
     <script type="text/javascript" src="lib/jmespath.js/jmespath.js"></script>
     <script type="text/javascript" src="lib/json-editor/dist/jsoneditor.js"></script>
-    <script type="text/javascript" src="plugins.js"></script>
+    <script type="text/javascript" src="lib/jquery-plugins/dist/jquery-plugins.js"></script>
     <script type="text/javascript" src="testids.js"></script>
     <script type="text/javascript" src="examples.js"></script>
 
