--- a/noeditor.html
+++ b/noeditor.html
@@ -42,7 +42,7 @@
     <script type="text/javascript" src="browserdetect.js"></script>
     <script type="text/javascript" src="lib/utils/dist/utils.js"></script>
     <script type="text/javascript" src="lib/jquery/dist/jquery.js"></script>
-    <script type="text/javascript" src="plugins.js"></script>
+    <script type="text/javascript" src="lib/jquery-plugins/dist/jquery-plugins.js"></script>
     <script type="text/javascript" src="examples.js"></script>
 
 </body>
