--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <script type="text/javascript" src="browserdetect.js"></script>
     <script type="text/javascript" src="lib/utils/dist/utils.js"></script>
     <script type="text/javascript" src="lib/jquery/dist/jquery.js"></script>
-    <script type="text/javascript" src="lib/jmespath.js/jmespath.js"></script>
+    <script type="text/javascript" src="lib/jmespath.js/artifacts/jmespath.min.js"></script>
     <script type="text/javascript" src="lib/json-editor/dist/jsoneditor.js"></script>
     <script type="text/javascript" src="lib/jquery-plugins/dist/jquery-plugins.js"></script>
     <script type="text/javascript" src="testids.js"></script>
