--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
 
-    <header>
+    <!--<header>-->
 
-    </header>
+    <!--</header>-->
 
     <main>
         <div class="uv" data-no-load="true" style="width:800px; height:600px; background-color: #000"></div>
