--- a/index.html
+++ b/index.html
@@ -23,28 +23,28 @@
 
         <!-- Note: in order for config changes to appear in the editor, you need to run a build -->
 
-        <hr/>
+        <!--<hr/>-->
 
-        <h3>Options</h3>
+        <!--<h3>Options</h3>-->
 
-        <div>
-            <input id="cors-or-jsonp-auto" checked="checked" name="cors-or-jsonp" type="radio"><label for="cors-or-jsonp-auto">Autodetect CORS/JSONP</label>
-            <input id="cors" name="cors-or-jsonp" type="radio"><label for="cors">Force CORS</label>
-            <input id="jsonp" name="cors-or-jsonp" type="radio"><label for="jsonp">Force JSONP</label>
-            <p>Controls whether the viewer uses CORS or JSONP to load manifests and info.json. Default automatic behaviour is to use JSONP for IE<10, CORS otherwise.</p>
-        </div>
+        <!--<div>-->
+            <!--<input id="cors-or-jsonp-auto" checked="checked" name="cors-or-jsonp" type="radio"><label for="cors-or-jsonp-auto">Autodetect CORS/JSONP</label>-->
+            <!--<input id="cors" name="cors-or-jsonp" type="radio"><label for="cors">Force CORS</label>-->
+            <!--<input id="jsonp" name="cors-or-jsonp" type="radio"><label for="jsonp">Force JSONP</label>-->
+            <!--<p>Controls whether the viewer uses CORS or JSONP to load manifests and info.json. Default automatic behaviour is to use JSONP for IE<10, CORS otherwise.</p>-->
+        <!--</div>-->
 
         <!--<div>-->
             <!--<input id="testids" type="checkbox"><label for="testids">Test Ids</label>-->
             <!--<p>Adds unique ids to viewer buttons for testing convenience.</p>-->
         <!--</div>-->
 
-        <div>
-            <input id="defaultToFullScreen" type="checkbox"><label for="defaultToFullScreen">Default to Full Screen</label>
-            <p>Makes the viewer open in full screen when the page loads.</p>
-        </div>
+        <!--<div>-->
+            <!--<input id="defaultToFullScreen" type="checkbox"><label for="defaultToFullScreen">Default to Full Screen</label>-->
+            <!--<p>Makes the viewer open in full screen when the page loads.</p>-->
+        <!--</div>-->
 
-        <a id="setOptionsBtn" class="button">Set</a>
+        <!--<a id="setOptionsBtn" class="button">Set</a>-->
 
         <hr/>
 
