--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="lib/foundation/css/foundation.css" />
     <link rel="stylesheet" href="lib/fontawesome/css/font-awesome.css" />
     <link rel="stylesheet" type="text/css" href="examples.css" />
-    <script type="text/javascript" id="embedUV" src="/src/lib/embed.js"></script>
+    <!--<script type="text/javascript" id="embedUV" src="/src/lib/embed.js"></script>-->
     <!--<script type="text/javascript" id="embedUV" src="uv/lib/embed.js"></script>-->
 </head>
 <body>
