use universalviewer.io

--- a/embeds.html
+++ b/embeds.html
@@ -22,7 +22,7 @@
         var isLocalhost = document.location.href.indexOf('localhost') != -1;
 
         if(!isLocalhost){
-            $('#embedUV').attr('src', 'http://universalviewer.github.io/examples/uv/lib/embed.js');
+            $('#embedUV').attr('src', 'http://universalviewer.io/examples/uv/lib/embed.js');
         }
 
     });
