--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
         <!--<a id="dragndrop" href="e-codices-help.html?manifest=http://www.e-codices.unifr.ch/metadata/iiif/kba-0003/manifest.json&amp;canvas=http://www.e-codices.unifr.ch/metadata/iiif/kba-0003/canvas/kba-0003_002r.json">-->
         <a id="dragndrop">
-            <img src="iiif-dragndrop-100px.png" title="Drag and drop this icon into an IIIF viewer">
+            <img src="iiif.png" title="Drag and drop this icon into an IIIF viewer">
         </a>
 
         <hr/>
