added yale scroll

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
 
     <!--</header>-->
 
+    <!--
+     psd dimensions
+     width:1138px; height:760px
+     -->
+
     <main>
         <div class="uv" data-no-load="true" style="width:924px; height:668px; background-color: #000"></div>
     </main>
