--- a/index.html
+++ b/index.html
@@ -66,21 +66,23 @@
             <img src="iiif.png" title="Drag and drop this icon into an IIIF viewer">
         </a>
 
-        <hr/>
+        <div style="display:none">
+            <hr/>
 
-        <h3>Locale</h3>
+            <h3>Locale</h3>
 
-        <p>Test setting the data-locale attribute on the embedding div.</p>
+            <p>Test setting the data-locale attribute on the embedding div.</p>
 
-        <select id="locale">
+            <select id="locale">
 
-        </select>
+            </select>
 
-        <p>Set locale precedence and label e.g. "cy-GB:Welsh,en-GB:English"</p>
+            <p>Set locale precedence and label e.g. "cy-GB:Welsh,en-GB:English"</p>
 
-        <input id="locales" type="text" value="" />
+            <input id="locales" type="text" value="" />
 
-        <a id="setLocalesBtn" class="button">Set</a>
+            <a id="setLocalesBtn" class="button">Set</a>
+        </div>
 
         <div id="configEditor" style="display: none">
             <hr/>
