--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
     <script type="text/javascript" src="lib/jmespath.js/artifacts/jmespath.js"></script>
     <script type="text/javascript" src="lib/json-editor/dist/jsoneditor.js"></script>
     <script type="text/javascript" src="lib/jquery-plugins/dist/jquery-plugins.js"></script>
-    <script type="text/javascript" src="testids.js"></script>
+    <!--<script type="text/javascript" src="testids.js"></script>-->
+    <!--<script type="text/javascript" src="events.js"></script>-->
     <script type="text/javascript" src="examples.js"></script>
 
 </body>
