--- a/uv/app.html
+++ b/uv/app.html
@@ -15,7 +15,9 @@
     </style>
 </head>
 <body>
+
     <div id="app"></div>
+
     <script type="text/javascript">
         var app = document.getElementById("app");
         var width = window.innerWidth || document.documentElement.clientWidth;
@@ -23,5 +25,27 @@
         app.setAttribute("style", "width:" + width + "px");
         app.setAttribute("style", "height:" + height + "px");
     </script>
+
+    <!-- uncomment the following for GA tracking when embedded on third party sites -->
+    <!--
+    <script type="text/javascript">
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        ga('create', 'id', 'auto');
+        ga('send', 'pageview');
+        function trackEvent(category, action, label) {
+            ga('send', 'event', category, action, label);
+        }
+        function trackVariable(name, value) {
+            ga('set', name, value);
+        }
+    </script>
+
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+    <script type="text/javascript" src="/examples/events.js"></script>
+    -->
+
 </body>
 </html>
