--- a/uv/app.html
+++ b/uv/app.html
@@ -35,23 +35,7 @@
     </script>
 
     <!-- uncomment the following for GA tracking when embedded on third party sites -->
-    <!--
-    <script type="text/javascript">
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-                    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-        ga('create', 'id', 'auto');
-        ga('send', 'pageview');
-        function trackEvent(category, action, label) {
-            ga('send', 'event', category, action, label);
-        }
-        function trackVariable(name, value) {
-            ga('set', name, value);
-        }
-    </script>
-    -->
-    <script type="text/javascript" src="/examples/events.js"></script>
+    <!--<script type="text/javascript" src="/examples/events.js"></script>-->
 
 </body>
 </html>
