--- a/uv/app.html
+++ b/uv/app.html
@@ -35,7 +35,7 @@
     </script>
 
     <!-- uncomment the following for GA tracking when embedded on third party sites -->
-    <script type="text/javascript" src="/examples/events.js"></script>
+    <!--<script type="text/javascript" src="/examples/events.js"></script>-->
 
 </body>
 </html>
