--- a/embeds.html
+++ b/embeds.html
@@ -17,14 +17,16 @@
 
 <div class="uv" data-locale="en-GB:English (GB),cy-GB:Cymraeg" data-config="" data-uri="http://wellcomelibrary.org/iiif/b16659090/manifest" data-collectionindex="0" data-manifestindex="0" data-sequenceindex="0" data-canvasindex="0" style="width:800px; height:600px; background-color: #000"></div>
 
-<script type="text/javascript" id="embedUV" src="http://localhost:8001/src/lib/embed.js"></script><script type="text/javascript">/* wordpress fix */</script>
+<script type="text/javascript" id="embedUV" src=""></script><script type="text/javascript">/* wordpress fix */</script>
 
 <script type="text/javascript">
 
     $(function(){
         var isLocalhost = document.location.href.indexOf('localhost') != -1;
 
-        if(!isLocalhost){
+        if(isLocalhost) {
+            $('#embedUV').attr('src', 'http://localhost:8001/src/lib/embed.js');
+        } else {
             $('#embedUV').attr('src', 'http://universalviewer.io/examples/uv/lib/embed.js');
         }
 
