--- a/embeds.html
+++ b/embeds.html
@@ -19,7 +19,7 @@
 
 <p>Etiam posuere est a justo vehicula, id mollis ligula consectetur. Duis varius tincidunt ante, sed tincidunt ante efficitur ut. Proin ac lectus nisl. In hac habitasse platea dictumst. Ut ultrices interdum ligula. Nam feugiat ornare venenatis. Sed ut tortor vitae ante vulputate aliquam. Proin id mi id ante aliquet eleifend. Sed vel ipsum sed quam suscipit condimentum.</p>
 
-<div class="uv" data-locale="en-GB:English (GB),cy-GB:Cymraeg" data-config="" data-uri="http://api.bl.uk/metadata/iiif/ark:/81055/vdc_100022545251.0x000002/manifest.json" data-collectionindex="0" data-manifestindex="0" data-sequenceindex="0" data-canvasindex="0" data-zoom="-1283.2996,-187.5,5069.5991,3750" data-rotation="0" style="width:560px; height:420px; background-color: #000"></div><script type="text/javascript" id="embedUV" src="http://localhost:8001/src/lib/embed.js"></script><script type="text/javascript">/* wordpress fix */</script>
+<div class="uv" data-locale="en-GB:English (GB),cy-GB:Cymraeg" data-config="" data-uri="http://api.bl.uk/metadata/iiif/ark:/81055/vdc_100022545251.0x000002/manifest.json" data-collectionindex="0" data-manifestindex="0" data-sequenceindex="0" data-canvasindex="0" style="width:560px; height:420px; background-color: #000"></div>
 
 
 <script type="text/javascript" id="embedUV" src="http://universalviewer.io/examples/uv/lib/embed.js"></script><script type="text/javascript">/* wordpress fix */</script>
