--- a/embeds.html
+++ b/embeds.html
@@ -5,7 +5,7 @@
 
 <body>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ultricies ac orci vitae pellentesque. Phasellus dictum dignissim iaculis. Nullam eget fermentum nisl, et auctor leo. Curabitur porta orci magna, non commodo ante placerat sed. Quisque tincidunt justo vel auctor volutpat. Curabitur quis tempus libero, eu blandit libero. Curabitur vitae arcu cursus, porta quam vitae, congue ipsum. Quisque luctus sodales nisi, at ultricies enim dapibus ut. Morbi non lobortis tortor, sit amet ornare purus. Nam nec enim nunc. Sed euismod dictum massa, id placerat diam ultrices ac. Phasellus eget nunc sed justo hendrerit ultricies eget ac erat. Integer vel lectus semper, condimentum odio dapibus, elementum ante. Integer quis scelerisque nunc. Suspendisse id pretium ante, ut porttitor felis.</p>
+<!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ultricies ac orci vitae pellentesque. Phasellus dictum dignissim iaculis. Nullam eget fermentum nisl, et auctor leo. Curabitur porta orci magna, non commodo ante placerat sed. Quisque tincidunt justo vel auctor volutpat. Curabitur quis tempus libero, eu blandit libero. Curabitur vitae arcu cursus, porta quam vitae, congue ipsum. Quisque luctus sodales nisi, at ultricies enim dapibus ut. Morbi non lobortis tortor, sit amet ornare purus. Nam nec enim nunc. Sed euismod dictum massa, id placerat diam ultrices ac. Phasellus eget nunc sed justo hendrerit ultricies eget ac erat. Integer vel lectus semper, condimentum odio dapibus, elementum ante. Integer quis scelerisque nunc. Suspendisse id pretium ante, ut porttitor felis.</p>
 
 
 <div class="uv" data-locale="en-GB:English (GB),cy-GB:Cymraeg" data-config="" data-uri="http://wellcomelibrary.org/iiif/collection/b19974760" data-collectionindex="7" data-manifestindex="9" data-sequenceindex="0" data-canvasindex="0" data-zoom="-0.0041,-0.1143,0.5114,0.4018" data-rotation="0" style="width:800px; height:600px; background-color: #000"></div>
@@ -18,9 +18,9 @@
 
 <div class="uv" data-locale="en-GB:English (GB),cy-GB:Cymraeg" data-config="" data-uri="http://wellcomelibrary.org/iiif/b16659090/manifest" data-collectionindex="0" data-manifestindex="0" data-sequenceindex="0" data-canvasindex="0" style="width:800px; height:600px; background-color: #000"></div>
 
-<p>Etiam posuere est a justo vehicula, id mollis ligula consectetur. Duis varius tincidunt ante, sed tincidunt ante efficitur ut. Proin ac lectus nisl. In hac habitasse platea dictumst. Ut ultrices interdum ligula. Nam feugiat ornare venenatis. Sed ut tortor vitae ante vulputate aliquam. Proin id mi id ante aliquet eleifend. Sed vel ipsum sed quam suscipit condimentum.</p>
+<p>Etiam posuere est a justo vehicula, id mollis ligula consectetur. Duis varius tincidunt ante, sed tincidunt ante efficitur ut. Proin ac lectus nisl. In hac habitasse platea dictumst. Ut ultrices interdum ligula. Nam feugiat ornare venenatis. Sed ut tortor vitae ante vulputate aliquam. Proin id mi id ante aliquet eleifend. Sed vel ipsum sed quam suscipit condimentum.</p>-->
 
-<div class="uv" data-locale="en-GB:English (GB),cy-GB:Cymraeg" data-config="" data-uri="http://api.bl.uk/metadata/iiif/ark:/81055/vdc_100022545251.0x000002/manifest.json" data-collectionindex="0" data-manifestindex="0" data-sequenceindex="0" data-canvasindex="0" style="width:560px; height:420px; background-color: #000"></div>
+<div class="uv" data-locale="en-GB:English (GB),cy-GB:Cymraeg" data-config="" data-uri="http://api.bl.uk/metadata/iiif/ark:/81055/vdc_000000000096" data-collectionindex="0" data-manifestindex="0" data-sequenceindex="0" data-canvasindex="0" style="width:800px; height:600px; background-color: #000"></div>
 
 
 <script type="text/javascript" id="embedUV" src="http://universalviewer.io/examples/uv/lib/embed.js"></script><script type="text/javascript">/* wordpress fix */</script>
