--- a/mobile.html
+++ b/mobile.html
@@ -19,7 +19,7 @@
 </head>    
 <body>
 
-<div class="uv left" data-locale="en-GB:English (GB),cy-GB:Cymraeg" data-uri="https://ipfs.io/ipfs/QmPXKbC96wb6zuUhd8m2HDoovZUqi3gFHbbL9W8vAEQX8a/or_7694_1595.json" style="background-color: #000"></div>
+<div class="uv left" data-locale="en-GB:English (GB),cy-GB:Cymraeg" data-uri="http://wellcomelibrary.org/iiif/b18035723/manifest" style="background-color: #000"></div>
 
 <!--<script type="text/javascript" id="embedUV" src="http://universalviewer.io/examples/uv/lib/embed.js"></script><script type="text/javascript">/* wordpress fix */</script>-->
 
