--- a/mobile.html
+++ b/mobile.html
@@ -21,9 +21,9 @@
 
 <div class="uv left" data-locale="en-GB:English (GB),cy-GB:Cymraeg" data-uri="http://wellcomelibrary.org/iiif/b18035723/manifest" style="background-color: #000"></div>
 
-<!--<script type="text/javascript" id="embedUV" src="http://universalviewer.io/examples/uv/lib/embed.js"></script><script type="text/javascript">/* wordpress fix */</script>-->
+<script type="text/javascript" id="embedUV" src="http://universalviewer.io/examples/uv/lib/embed.js"></script><script type="text/javascript">/* wordpress fix */</script>
 
-<script type="text/javascript" id="embedUV" src="http://localhost:8001/src/lib/embed.js"></script><script type="text/javascript">/* wordpress fix */</script>
+<!--<script type="text/javascript" id="embedUV" src="http://localhost:8001/src/lib/embed.js"></script><script type="text/javascript">/* wordpress fix */</script>-->
 
 <script>
 
