--- a/mobile.html
+++ b/mobile.html
@@ -20,7 +20,7 @@
 </head>    
 <body>
 
-<div class="uv left" data-locale="en-GB:English (GB),cy-GB:Cymraeg" data-uri="http://wellcomelibrary.org/iiif/b18035723/manifest" style="background-color: #000"></div>
+<div class="uv left" data-locale="en-GB:English (GB),cy-GB:Cymraeg" data-uri="http://luna.folger.edu/luna/servlet/iiif/m/FOLGERCM1~6~6~899189~195467/manifest" style="background-color: #000"></div>
 
 <script>
 
