--- a/two-up.html
+++ b/two-up.html
@@ -19,7 +19,7 @@
 </head>    
 <body>
 
-<div class="uv left" data-locale="en-GB:English (GB),cy-GB:Cymraeg" data-config="/examples/two-up-config.json" data-uri="http://wellcomelibrary.org/iiif/collection/b19974760" data-collectionindex="7" data-manifestindex="9" data-sequenceindex="0" data-canvasindex="0" data-zoom="-0.0041,-0.1143,0.5114,0.4018" data-rotation="0" style="width:800px; height:600px; background-color: #000"></div>
+<div class="uv left" data-locale="en-GB:English (GB),cy-GB:Cymraeg" data-config="/examples/two-up-config.json" data-uri="http://wellcomelibrary.org/iiif/collection/b19974760" data-collectionindex="7" data-manifestindex="9" data-sequenceindex="0" data-canvasindex="0" data-rotation="0" style="width:800px; height:600px; background-color: #000"></div>
 
 <div class="uv right" data-locale="en-GB:English (GB),cy-GB:Cymraeg" data-config="/examples/two-up-config.json" data-uri="http://api.bl.uk/metadata/iiif/ark:/81055/vdc_100022545251.0x000002/manifest.json" data-collectionindex="0" data-manifestindex="0" data-sequenceindex="0" data-canvasindex="0" style="width:800px; height:600px; background-color: #000"></div>
 
