--- a/mobile.html
+++ b/mobile.html
@@ -1,7 +1,10 @@
-<html>
+<!DOCTYPE html>
+
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta name=viewport content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <script type="text/javascript" src="lib/jquery/dist/jquery.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <script type="text/javascript" src="uv/lib/offline.js"></script>
+    <script type="text/javascript" src="uv/app.js"></script>
     <style>
         body {
             margin: 0;
@@ -20,19 +23,12 @@
 </head>    
 <body>
 
-<div class="uv left" data-locale="en-GB:English (GB),cy-GB:Cymraeg" data-uri="http://luna.folger.edu/luna/servlet/iiif/m/FOLGERCM1~6~6~899189~195467/manifest" style="background-color: #000"></div>
+<div class="uv left" data-uri="http://luna.folger.edu/luna/servlet/iiif/m/FOLGERCM1~6~6~899189~195467/manifest" style="background-color: #000"></div>
+<script type="text/javascript" id="embedUV" src="uv/embed.js"></script>
 
 <script>
 
     $(function() {
-
-        var isLocalhost = document.location.href.indexOf('localhost') != -1;
-
-        if (isLocalhost){
-            $('body').append('<script type="text/javascript" id="embedUV" src="/src/lib/embed.js"><\/script>');
-        } else {
-            $('body').append('<script type="text/javascript" id="embedUV" src="http://universalviewer.io/examples/uv/lib/embed.js"><\/script>');
-        }
 
         var $UV = $('.uv');
 
