--- a/uv/app.html
+++ b/uv/app.html
@@ -24,11 +24,11 @@
     <div id="app"></div>
 
     <script type="text/javascript">
-        var app = document.getElementById("app");
+        var app = document.getElementById('app');
         var width = window.innerWidth || document.documentElement.clientWidth;
         var height = window.innerHeight || document.documentElement.clientHeight;
-        app.setAttribute("style", "width:" + width + "px");
-        app.setAttribute("style", "height:" + height + "px");
+        app.setAttribute('style', 'width:' + width + 'px');
+        app.setAttribute('style', 'height:' + height + 'px');
 
         window.addEventListener('uvReady', function(e) { 
 
@@ -39,10 +39,21 @@
                 data: urlDataProvider.data()
             });
             
+            uv.on('canvasIndexChanged', function(index) {
+                urlDataProvider.set('cv', index);
+            });
+
+            uv.on('openseadragonExtension.rotationChanged', function(rotation) {
+                urlDataProvider.set('r', rotation);
+            });
+
+            uv.on('openseadragonExtension.xywhChanged', function(xywh) {
+                urlDataProvider.set('xywh', xywh);
+            });
+
             uv.on('reload', function(data) {
-                urlDataProvider.assign(data);
                 data.isReload = true;
-                uv.data(data);
+                uv.set(Object.assign(urlDataProvider.data(), data));
             });
 
         }, false);
