--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         function loadManifests(cb) {
 
             // load manifests
-            $.getJSON('ipfs-manifests.json', function(manifests) {
+            $.getJSON('manifests.json', function(manifests) {
 
                 var $manifestSelect = $('#manifestSelect');
 
